--- a/style.css
+++ b/style.css
@@ -25,7 +25,9 @@ justify-content: end;
 margin: 13px;
 gap: 20px;
 
+
 }
+
 
 .texto-logo {
     font-size: 20px;
@@ -40,6 +42,8 @@ a {
 font-size: 15px;
 font-weight: 400;
 color: black;
+
+text-decoration: none;
 
 
 }
@@ -105,8 +109,11 @@ li:hover {
 
     a {
 
-        font-size: 40px;
+        font-size: 28px;
         font-weight: 400;
+
+        text-decoration: none;
+
 
         
     }
